<resources>
    <string name="app_name">Khaana Kart Admin</string>
    <string name="splash_screen_title">Khaana Kart</string>
    <string name="primary_logo_desc">Primary Application Logo</string>
    <string name="image_desc">Image</string>
    <string name="app_slogan">Fresh Flavors, Fast</string>
    <string name="app_designed_by_text">Developed by \n Arghadeep</string>
    <string name="admin_dashboard_text">Admin Dashboard</string>
    <string name="login_to_dashboard_text">Login To Your Dashboard</string>
    <string name="email_or_phone_text_field_hint">Email or Phone Number</string>
    <string name="password_text_field_hint">Password</string>
    <string name="or_text">Or</string>
    <string name="continue_with_text">Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login_button_text">Login</string>
    <string name="do_not_have_account_text">Don\'t have account?</string>
    <string name="sign_up_here_text">Sign Up Here</string>
    <string name="name_text_field_hint">Name</string>
    <string name="owner_name_text_field_hint">Owner Name</string>
    <string name="restaurant_name_text_field_hint">Restaurant Name</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_up_with_text">Sign Up With</string>
    <string name="choose_location_text">Choose Your Location</string>
    <string name="auto_complete_placeholder">-- Select --</string>
    <string name="pending_order_text">Pending\nOrders</string>
    <string name="completed_order_text">Completed\nOrders</string>
    <string name="total_earnings_text">Total\nEarnings</string>
    <string name="placeholder_double_text">17.99</string>
    <string name="placeholder_int_text">17</string>
    <string name="add_items_to_menu_text">Add Items\nTo Menu</string>
    <string name="view_all_items_in_menu_text">View All\nItems In Menu</string>
    <string name="my_profile_text">My Profile</string>
    <string name="create_new_user_text">Create\nNew User</string>
    <string name="order_status_text">Order Status</string>
    <string name="logout_text">Logout</string>
    <string name="add_items_to_menu_screen_title">Add Menu Item</string>
    <string name="view_menu_screen_title">Menu</string>
    <string name="order_status_screen_title">Order Status</string>
    <string name="profile_screen_title">Admin Profile</string>
    <string name="pending_order_screen_title">Pending Order</string>
    <string name="item_name_text">Name:</string>
    <string name="item_price_text">Price:</string>
    <string name="item_image_text">Image:</string>
    <string name="item_description_text">Short Description:</string>
    <string name="item_ingredients_text">Ingredients:</string>
    <string name="edit_text_content_desc">Edit Text</string>
    <string name="menu_item_name_text_field_hint">Enter Menu Item Name</string>
    <string name="menu_item_price_text_field_hint">Enter Menu Item Price</string>
    <string name="menu_item_desc_text_field_hint">Enter Menu Item Short Description</string>
    <string name="menu_item_ingredients_text_field_hint">Enter Menu Item Ingredients</string>
    <string name="add_menu_item_button_text">Add Item</string>
    <string name="placeholder_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="placeholder_image_desc">Placeholder Image</string>
    <string name="placeholder_string_text">Placeholder Text</string>
    <string name="delivered_text">Delivered</string>
    <string name="payment_text">Payment</string>
    <string name="edit_profile_prompt_text">Click here to edit</string>
    <string name="profile_name_text">Name</string>
    <string name="profile_address_text">Address</string>
    <string name="profile_email_text">Email</string>
    <string name="profile_phone_text">Phone</string>
    <string name="profile_password_text">Password</string>
    <string name="save_information_button_text">Save Information</string>
    <string name="create_new_user_admin_text">Create New User Admin</string>
    <string name="create_new_user_button_text">Create New User</string>
    <string name="accept_button_text">Accept</string>
    <string name="quantity_text">Quantity</string>
</resources>