<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/orderFoodImage"
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:contentDescription="@string/placeholder_image_desc"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/orderCustomerName"
                style="@style/card_view_food_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/placeholder_string_text"
                app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                app:layout_constraintTop_toTopOf="@+id/cardViewImage" />

            <TextView
                android:id="@+id/orderFoodQuantity"
                style="@style/card_view_food_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/placeholder_int_text"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewImage"
                app:layout_constraintStart_toEndOf="@+id/quantityText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acceptDispatchButton"
                style="@style/secondary_button"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/accept_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/quantity_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/orderFoodQuantity"
                app:layout_constraintStart_toEndOf="@+id/cardViewImage"
                app:layout_constraintTop_toTopOf="@+id/orderFoodQuantity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>